# django-site

./: .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  manage.py  mypy.ini  package.json  pyproject.toml
.github/actions/build-time-key-fragment/: action.yml
.github/actions/setup/: action.yml
.github/scripts/mypy/: log.sh
.github/workflows/: test.yml  warm-mypy-cache  warm-mypy-cache.yml
apps/hello/: admin.py  models.py  tests.py  urls.py  views.py
apps/hello/migrations/: 0001_initial.py  0003_rename_sender_name_response_author_name_and_more.py  0004_remove_response_greeting_message_delete_greeting_and_more.py
apps/hello/templates/: base.html
apps/hello/templates/hello/: create_greeting.html  greeting_detail.html  greeting_not_found.html  hello_world.html  list_greetings.html
hello/: models.py  views.py
hello/migrations/: 0002_response.py
mysite/: settings.py  urls.py
