[project]
name = "django-site"
version = "0.1.0"
description = "Django web application"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "django==5.2.4",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]==5.2.1",
    "mypy==1.16.1",
    "pre-commit==4.2.0",
    "ruff==0.12.3",
]

[tool.mypy]
plugins = "mypy_django_plugin.main"

[tool.django-stubs]
django_settings_module = "mysite.settings"

[tool.ruff]
extend-exclude = [
    "apps/*/migrations/*",
]
