[project]
name = "django-site"
version = "0.1.0"
description = "Django web application"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
  "django==5.2.4",
]

[dependency-groups]
dev = [
  "django-stubs[compatible-mypy]==5.2.1",
  "mypy==1.16.1",
  "pre-commit==4.2.0",
  "ruff==0.12.3",
  "toml-sort==0.24.2",
]

[tool.mypy]
strict = true
sqlite_cache = true
plugins = "mypy_django_plugin.main"

[tool.django-stubs]
django_settings_module = "mysite.settings"

[tool.ruff]
extend-exclude = [
  "apps/*/migrations/*",
]
force-exclude = true
lint.select = [
  "F", # pyflakes
  "I", # isort
  "DJ", # django
  "UP", # pyupgrade
]

[tool.tomlsort]
in_place = true
no_sort_tables = true
trailing_comma_inline_array = true
